# shell

./: .gitignore  LockScreen.qml  MainWindow.qml  PLAN.md  README.md  cava.conf  install.sh  launch.sh  shell.qml
bar/: Bar.qml  BarCenter.qml  BarExclusionZone.qml  BarLeft.qml  BarRight.qml  ScreenBorder.qml
blobs-plugin/: CMakeLists.txt
blobs-plugin/src/: blobmaterial.cpp  blobshape.hpp
hypr/: quickshell.lua
panels/: AudioPanel.qml  BluetoothPanel.qml  ContextMenu.qml  Dashboard.qml  Launcher.qml  NetworkPanel.qml  NotificationCenter.qml  PowerPanel.qml  PowerProfilePanel.qml  Settings.qml  ToastPopup.qml  TrayMenuPanel.qml  WorkspaceOverview.qml  qmldir
scripts/hypr/: launcher-refocus.sh  movewin.sh  refocus-active.sh  refocus-prev.sh  special-toggle.sh  tools-toggle.sh  ws.sh
scripts/ytmd-bridge/: bridge.js  package-lock.json  package.json
services/: AppService.qml  AppUsageService.qml  AudioService.qml  BatteryService.qml  BindingService.qml  BrightnessService.qml  CalendarService.qml  CavaService.qml  ContextMenuService.qml  DependencyService.qml  FocusService.qml  LauncherService.qml  LockService.qml  MprisService.qml  NotificationService.qml  Paths.qml  PinnedService.qml  PopoutService.qml  ScreenRecorderService.qml  SettingsService.qml  SettingsUi.qml  SystemMetricsService.qml  ToolsService.qml  WallhavenService.qml  WallpaperService.qml  WeatherService.qml  YtmCompanionService.qml  YtmSocket.qml  qmldir
theme/: Elevation.qml  ThemeManager.qml  qmldir
theme/matugen/: matugen.toml  quickshell.tera  setwallpaper.sh
theme/presets/: catppuccin-frappe.json  catppuccin-latte.json  catppuccin-mocha.json  (+5 more)
(+15 files in other folders)
